# transcriber

./: .env.example  .gitignore  README.md  conversa.txt  example.py  pyproject.toml  pytest.ini  requirements.txt  sample.txt
.claude/: settings.local.json
tests/: README.md  __init__.py  conftest.py  test_distil_whisper.py  test_faster_whisper.py  test_gemini.py  test_integration.py
transcription_library/: __init__.py
transcription_library/core/: __init__.py  config.py  interfaces.py  manager.py  utils.py
transcription_library/providers/: __init__.py  distil_whisper_provider.py  faster_whisper_provider.py  gemini_provider.py
